--- a/index.html
+++ b/index.html
@@ -5,4 +5,13 @@
   <meta http-equiv=x-UA-compatiblecontent`content=IE=edge´>
   <title> TITULO DA ABA</title>
   <meta name=`viewport'content=wildth=device-width,initial-scale=1´>
-  link rel=`stylesheet´type
+  link rel=`stylesheet´type=`texte/css'media=`screen´href=śtyle.css>
+  <script src="ḿain.js´></script>
+</read>
+<body>
+  <header ><p><mg i="TITULOIMAGEM"src="logo, `peg"
+alt="DECRICAO IMAGEM"></p>
+    <nav>
+     <ul id="lista 01">
+      <li>< a target="_blank" href='''index.html'> home</li>
+      
