--- a/index.html
+++ b/index.html
@@ -14,4 +14,15 @@ alt="DECRICAO IMAGEM"></p>
     <nav>
      <ul id="lista 01">
       <li>< a target="_blank" href='''index.html'> home</li>
-      
+    <li><a target --´´blankhrer="https;//www.consultaescolas.pr.gov.br">sitedocolé<gio>/li>
+      <li><a target="_blank"href=`https://www.facebook.com/profile.phr.2
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>TITULODAPAGINA</h1>
+      <div class="PRIMEIROPARAGRAFO">
+      <<h3>TITULODOTEXTO</h3>
+      <p>cixb>TEXTO</h3>
+        <p>cixb>TEXTO</h3>
+          <p>
