--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@ alt="DECRICAO IMAGEM"></p>
       <div class="PRIMEIROPARAGRAFO">
       <<h3>TITULODOTEXTO</h3>
       <p>cixb>TEXTO</h3>
-        <p>cixb>TEXTO</h3>
-          <p>
+         <li>ITEM01</li>
+         <li>ITEM02</li>
+         <li>ITEM3</li>
+         </ul>
+         </div>
+         <h1>***</n1>
+   </main>
+   <footer><pimgdid="TITULOIMAGEM"scr-"logo.jpeg"alt-"DESCRICAOIMAGEM"><p></footer>
+</body>
+</html>
